--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,6 @@ edition = "2021"
 
 [dependencies]
 rand = "0.8.5"
+serde_json = "1.0.85"
+serde = { version = "1.0.145",  features = ["derive", "rc"] }
 
