--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,4 +10,6 @@ edition = "2021"
 rand = "0.8.5"
 serde_json = "1.0.85"
 serde = { version = "1.0.145",  features = ["derive", "rc"] }
+anyhow = "1.0.65"
+log = "0.4.17"
 
